fix: wrong text wrapping

--- a/css/main.css
+++ b/css/main.css
@@ -111,7 +111,6 @@ header {
     transition: all 700ms;
 
     font-size: 1.5em;
-    line-height: 3em;
 
     display: flex;
     flex-direction: column;
@@ -122,6 +121,8 @@ header {
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    width: 100%;
 }
 
 #drawer .disposer.btn {
@@ -141,18 +142,27 @@ header {
     border: 1px solid transparent;
     padding: var(--box-padding);
     border-radius: var(--border-radius);
+    border: 1px solid;
 }
 
 #drawer #menu #hire-me:hover {
-    border: 1px solid;
-    
+    opacity: .75;
+}
+
+#drawer #menu li {
+    display: block;
+    margin: 40px 0;
+    /* width: 100%; */
 }
 
 nav a {
     color: var(--color-primary);
     font-weight: 600;
+    display: block;
+    width: 100%;
 
     transition: all 100ms;
+    text-align: center;
 }
 
 nav a:hover {
